# my-wxauto

./: CLAUDE.md  README.md  _patch_wechat.py  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-12-hermes-sidecar-adapter.md
docs/superpowers/specs/: 2026-05-09-wechat-bridge-reliability-design.md  2026-05-12-hermes-sidecar-adapter-design.md
my_wxauto/: __init__.py
src/my_wxauto/: __init__.py  bridge_batcher.py  bridge_events.py  bridge_server.py  bridge_store.py  cli.py  hermes_sidecar.py  keyboard.py  listener.py  probes.py  wechat.py
tests/: test_bridge_batcher.py  test_bridge_events.py  test_bridge_listener.py  test_bridge_server.py  test_bridge_store.py  test_cli.py  test_hermes_sidecar.py  test_package_exports.py  test_probes.py  test_wechat.py
